<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    android:background="#FFFFFF"
    tools:context=".A_Horario">

    <include
        layout="@layout/encabezado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/división"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#000000" />

    <TextView
        android:id="@+id/txtHorario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/marvel"
        android:text="@string/horario"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/txtMensaje"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        android:fontFamily="@font/marvel"
        android:gravity="center"
        android:text="@string/horario_msn"
        android:textColor="#000000"
        android:textSize="18sp" />

    <View
        android:id="@+id/división2"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#FFFFFF" />

    <TextView
        android:id="@+id/txtTituloActividad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0AA81C"
        android:fontFamily="@font/marvel"
        android:gravity="center"
        android:text="@string/actividades"
        android:textColor="#000000"
        android:textSize="18sp" />

    <FrameLayout
        android:id="@+id/frameList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/listaActividades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#BF4B4C4B"
            android:drawSelectorOnTop="false" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnAceptar"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/botonsolido"
                android:fontFamily="@font/marvel"
                android:onClick="agregar"
                android:text="@string/aceptar"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@drawable/botonvacio"
                android:fontFamily="@font/marvel"
                android:onClick="cancelar"
                android:text="@string/cancelar"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAceptar"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout >

    </ScrollView>

</LinearLayout>

