<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="#FFFFFF">

                        <TextView
                            android:id="@+id/txtNombre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/marvel"
                            android:text="@string/nombre"
                            android:textColor="#000000"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/txtFecha"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/marvel"
                            android:text="@string/fecha"
                            android:textColor="#000000"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/txtLugar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/marvel"
                            android:text="@string/lugar"
                            android:textColor="#000000"
                            android:textAlignment="center" />
                </LinearLayout>
        </ScrollView>

</RelativeLayout>