<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".M_MenuQR">

    <include
        layout="@layout/encabezado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/división"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#000000" />

    <TextView
        android:id="@+id/txtTituloActividad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/marvel"
        android:text="@string/actividad"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnIniciarEscaneo"
            android:layout_width="141dp"
            android:layout_height="53dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/botonsolido"
            android:fontFamily="@font/marvel"
            android:onClick="iniciarRegistros"
            android:text="@string/iniciarEscaneo"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.384" />

        <Button
            android:id="@+id/btnRegistros"
            android:layout_width="137dp"
            android:layout_height="46dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/botonvacio"
            android:fontFamily="@font/marvel"
            android:onClick="mostrarRegistros"
            android:text="@string/verRegistros"
            android:textColor="#000000"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnIniciarEscaneo"
            app:layout_constraintVertical_bias="0.212" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>