<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".M_Escaner">

    <include
        layout="@layout/encabezado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/frmVisor"
        android:layout_width="match_parent"
        android:layout_height="200dp">
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <EditText
                android:id="@+id/txtNoControl"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:autofillHints="@string/noControl"
                android:backgroundTint="#BF4B4C4B"
                android:ems="10"
                android:fontFamily="@font/marvel"
                android:hint="@string/noControl"
                android:inputType="textEmailAddress"
                android:textColor="#000000"
                android:textColorHint="#BF4B4C4B"
                android:textCursorDrawable="@drawable/botonsolido"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.259" />

            <Button
                android:id="@+id/btnEntrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/botonsolido"
                android:fontFamily="@font/marvel"
                android:text="@string/entrar"
                android:textStyle="bold"
                android:onClick="ingresarAsistencia"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.462" />

            <TextView
                android:id="@+id/txtAlumno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnEntrar"
                app:layout_constraintVertical_bias="0.25" />

            <ImageView
                android:id="@+id/imgViewTeclado"
                android:layout_width="48dp"
                android:layout_height="29dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/teclado"
                android:onClick="mostrarAlumno"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/txtNoControl"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.272"
                app:srcCompat="@drawable/teclado" />

            <Button
                android:id="@+id/btnReescanear"
                android:layout_width="130dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/botonvacio"
                android:fontFamily="@font/marvel"
                android:onClick="reescanear"
                android:text="@string/reescanear"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.975"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.041" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</LinearLayout>